# rwl-poc

./: .gitignore  README.md  main.py  package.json  pyproject.toml
server/: __init__.py
server/bots/: adder.py  multiplier.py  printer.py  subtractor.py
server/injector/: __init__.py
server/models/: pipeline.py
server/orchestrator/: __init__.py  dtos.py
server/orchestrator/business_process/: __init__.py
server/orchestrator/business_process/steps/: __init__.py  abstract.py  adding.py  multiplying.py  starting.py  subtracting.py  validating.py
server/views/: __init__.py  health.py  pipelines.py
